{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 79,
  "lineage": "b6feea23-d877-0118-bba9-790963fa3997",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0587f91a4fabb34f0",
            "arn": "arn:aws:ec2:ap-southeast-1:291041007391:elastic-ip/eipalloc-0587f91a4fabb34f0",
            "association_id": "eipassoc-0eda45fc1fd86af4f",
            "domain": "vpc",
            "id": "eipalloc-0587f91a4fabb34f0",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-04dee63550c69b14d",
            "private_dns": "ip-10-0-2-165.ap-southeast-1.compute.internal",
            "private_ip": "10.0.2.165",
            "public_dns": "ec2-52-74-215-6.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.74.215.6",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "staging-nat-eip"
            },
            "tags_all": {
              "Name": "staging-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-eks-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:291041007391:internet-gateway/igw-0a3341c7d7a8e7bb4",
            "id": "igw-0a3341c7d7a8e7bb4",
            "owner_id": "291041007391",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "staging-igw-eks-main"
            },
            "tags_all": {
              "Name": "staging-igw-eks-main"
            },
            "vpc_id": "vpc-049866d842b07827c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-eks-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0587f91a4fabb34f0",
            "association_id": "eipassoc-0eda45fc1fd86af4f",
            "connectivity_type": "public",
            "id": "nat-08ded509c38049ced",
            "network_interface_id": "eni-04dee63550c69b14d",
            "private_ip": "10.0.2.165",
            "public_ip": "52.74.215.6",
            "region": "ap-southeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d111b334d3181fd9",
            "tags": {
              "Name": "staging-nat-gw"
            },
            "tags_all": {
              "Name": "staging-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.igw-eks-main",
            "aws_subnet.public-1-zone1",
            "aws_vpc.vpc-eks-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:291041007391:route-table/rtb-08a75370bd904d4ca",
            "id": "rtb-08a75370bd904d4ca",
            "owner_id": "291041007391",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08ded509c38049ced",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staging-private-rt"
            },
            "tags_all": {
              "Name": "staging-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-049866d842b07827c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.igw-eks-main",
            "aws_nat_gateway.nat-gw",
            "aws_subnet.public-1-zone1",
            "aws_vpc.vpc-eks-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:291041007391:route-table/rtb-0563ea8f333482fdc",
            "id": "rtb-0563ea8f333482fdc",
            "owner_id": "291041007391",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a3341c7d7a8e7bb4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staging-public-rt"
            },
            "tags_all": {
              "Name": "staging-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-049866d842b07827c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw-eks-main",
            "aws_vpc.vpc-eks-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043654ebafc8a5af1",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-08a75370bd904d4ca",
            "subnet_id": "subnet-0e176d78dada8e928"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.igw-eks-main",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-rt",
            "aws_subnet.private-1-zone1",
            "aws_subnet.public-1-zone1",
            "aws_vpc.vpc-eks-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfe20cdfc4a11b6e",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-08a75370bd904d4ca",
            "subnet_id": "subnet-07cfd4924b883472c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_internet_gateway.igw-eks-main",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-rt",
            "aws_subnet.private-1-zone2",
            "aws_subnet.public-1-zone1",
            "aws_vpc.vpc-eks-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0311bda26173e5302",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0563ea8f333482fdc",
            "subnet_id": "subnet-0d111b334d3181fd9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw-eks-main",
            "aws_route_table.public-rt",
            "aws_subnet.public-1-zone1",
            "aws_vpc.vpc-eks-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046bd301ba30cd758",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0563ea8f333482fdc",
            "subnet_id": "subnet-0fcac0cdc035ad6d1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw-eks-main",
            "aws_route_table.public-rt",
            "aws_subnet.public-1-zone2",
            "aws_vpc.vpc-eks-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1-zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:291041007391:subnet/subnet-0e176d78dada8e928",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e176d78dada8e928",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291041007391",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "staging-private-1-zone1",
              "kubernetes.io/cluster/demo-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "staging-private-1-zone1",
              "kubernetes.io/cluster/demo-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-049866d842b07827c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "291041007391",
            "id": "subnet-0e176d78dada8e928",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.vpc-eks-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1-zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:291041007391:subnet/subnet-07cfd4924b883472c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07cfd4924b883472c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291041007391",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "staging-private-1-zone2",
              "kubernetes.io/cluster/demo-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "staging-private-1-zone2",
              "kubernetes.io/cluster/demo-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-049866d842b07827c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "291041007391",
            "id": "subnet-07cfd4924b883472c",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.vpc-eks-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1-zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:291041007391:subnet/subnet-0d111b334d3181fd9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d111b334d3181fd9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291041007391",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "staging-public-1-zone1",
              "kubernetes.io/cluster/demo-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "staging-public-1-zone1",
              "kubernetes.io/cluster/demo-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-049866d842b07827c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "291041007391",
            "id": "subnet-0d111b334d3181fd9",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.vpc-eks-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1-zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:291041007391:subnet/subnet-0fcac0cdc035ad6d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcac0cdc035ad6d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "291041007391",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "staging-public-1-zone2",
              "kubernetes.io/cluster/demo-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "staging-public-1-zone2",
              "kubernetes.io/cluster/demo-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-049866d842b07827c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "291041007391",
            "id": "subnet-0fcac0cdc035ad6d1",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.vpc-eks-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-eks-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:291041007391:vpc/vpc-049866d842b07827c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f55f6f36cbbaf036",
            "default_route_table_id": "rtb-0036944850759c614",
            "default_security_group_id": "sg-02106d301bd4b211a",
            "dhcp_options_id": "dopt-06f11a0a2cb06ae96",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-049866d842b07827c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0036944850759c614",
            "owner_id": "291041007391",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "staging-vpc-eks-main"
            },
            "tags_all": {
              "Name": "staging-vpc-eks-main"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}